# easy-ics

./: .gitignore  README.md  README.zh-CN.md  package-lock.json
backend/: .env.example  README.md  backend_startup.py  pyproject.toml  run.py
backend/app/: __init__.py  api.py  main.py
backend/app/models/: __init__.py  event.py
backend/app/services/: __init__.py  ics_service.py  ocr_service.py  parser_service.py
backend/app/services/parser/: __init__.py  dateparser_parser.py  datetime_parser.py  event_parser.py  location_parser.py  parser_ideas.md  priority_parser.py  re_parser.py  spaCy_parser.py
backend/docs/: BACKEND_STARTUP.md  ICS_SERVICE.md  ICS_SERVICE_QUICK_REFERENCE.md  ICS_TESt_REFERENCE.md
backend/tests/: __init__.py  ics_test.py  ocr_test.py  test_dateparser.py  test_parser_custom.py  test_parser_service.py
backend/tests/image/: __init__.py
docs/: OCR_TEST_REFERENCE.md  api.md
frontend/: .env.local.example  index.html  package-lock.json  package.json
frontend/docs/: COLOR_MIGRATION_SUMMARY.md  COLOR_SCHEME_GUIDE.md  QUICK_COLOR_CHANGE.md
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: ErrorMessage.jsx  EventsList.jsx  FormActions.jsx  ImageUploadArea.jsx  LocationTimezoneSettings.jsx  ResultMessage.jsx  TextInputField.jsx  index.js
frontend/src/hooks/: index.js  useClipboard.js  useHome.js  useImageUpload.js  useLocationSettings.js  useProcessing.js
frontend/src/pages/: About.jsx  Home.jsx  NotFound.jsx
frontend/src/sections/: OCRPanel.jsx  (+1 more)
frontend/tests/: mock-data.js  setup.js
local/: workflow.md
(+18 files in other folders)
